--- a/website/package.json
+++ b/website/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-pose": "^4.0.8",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.3",
     "styled-components": "^4.2.0"
