--- a/website/package.json
+++ b/website/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "website",
+  "name": "calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "aos": "^2.3.4",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.3",
-    "styled-components": "^4.2.0"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,10 +21,16 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
